# bachelor-thesis

./: .gitignore  .gitmodules  README.md  bachelor-thesis.md  build.sh  controller_bindings.json  docker-compose.yml  gears.ipynb  manipulator.urdf  setup-dev.sh  setup.sh
.devcontainer/ROS2/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/vGPU/: devcontainer.json
dockerfiles/demo-nodes/: Dockerfile
dockerfiles/gazebo/: Dockerfile
dockerfiles/moveit2/: Dockerfile
dockerfiles/ros/: Dockerfile
dockerfiles/ros2/: Dockerfile
dockerfiles/turtlesim/: Dockerfile
dockerfiles/twig/: Dockerfile  entrypoint.bash
docs/config-explanations/: README.md
docs/docker-commands/: README.md
docs/old/: README.md
encoders/read/: read.ino
encoders/softi2c/: AS5600.cpp  AS5600.h  softi2c.ino
gazebo/classic/worlds/: main.sdf  manipulator.world
install-scripts/: install-gazebo.bash  install-ros2-gazebo.bash  install-wsl.bash  remove-ros2.bash
launchfiles/: turtlesim_mimic_launch.yaml
scripts/containers/: ros2-entrypoint.bash  twig-entrypoint.bash
scripts/git/: ignore_local_config_file_changes.bash  list_ignored_files.bash  un_ignore_local_config_file_changes.bash
scripts/install/: configure-workspace.bash  install-packages.bash  install-ros2.bash  update-registries.bash
scripts/install/wsl-joystick/: win.bash  wsl.bash
scripts/ros2/: build-packages.bash  clone-repos.bash  install-dependencies.bash  install-packages.bash  purge.bash
scripts/setup/: configure-workspace.bash
scripts/setup/ubuntu/: install-ros2.bash
servo/: sevo_continious.HBP
servo/potmeter_servo_control/: potmeter_servo_control.ino
src/: ros2.repos
src/auv_manipulator/: CMakeLists.txt  package.xml
src/auv_manipulator/launch/: rviz_launch.xml
src/auv_manipulator/urdf/: manipulator.rviz  manipulator.urdf.xacro
src/auv_manipulator_py/: package.xml  setup.cfg  setup.py
src/auv_servo/: CMakeLists.txt  package.xml
src/auv_servo/config/: panda_simulated_config.yaml
src/auv_servo/launch/: demo_twist.launch.py
src/my_package/: package.xml
src/panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_moveit_config/config/: initial_positions.yaml  kinematics.yaml  panda.srdf
src/panda_teleop/: CMakeLists.txt  package.xml
src/panda_teleop/config/: controller_mappings.yaml  joystick_teleop.config.yaml
src/panda_teleop/launch/: foxglove.launch.py  teleop.launch.py
src/panda_teleop/src/: joystick_teleop.cpp
src/twig/: CMakeLists.txt  package.xml
src/twig/foxglove_profiles/: diagnostics.json
src/twig/launch/: all-non-gui.py  all.launch.py  controller_manager.launch.py  diagnostics.launch.py  direct.launch.py  foxglove.launch.py  foxglove_servo_teleop.launch.py  joy.launch.py  moveit_demo.launch.py  robot_moveit.launch.py  rviz.launch.py  servo_teleop.launch.py  twig.launch.py
src/twig_3d_models/twig/: twig_arm_47mm_bearing.SLDPRT  twig_arm_assembly.SLDASM  twig_arm_center_shaft.SLDPRT  twig_arm_clamping_adapter_claw.SLDPRT  twig_arm_clamping_claw part_1.SLDPRT  twig_arm_clamping_claw_part_2.SLDPRT  twig_arm_clamping_m6_rod.SLDPRT  twig_arm_clamping_movable adapter.SLDPRT  twig_arm_clamping_movable adapter_part2.SLDPRT  twig_arm_clamping_pin4_movable_adapter.SLDPRT  twig_arm_clamping_rotating_pins.SLDPRT  twig_arm_innerlockring.SLDPRT  twig_arm_innerstructure-LAPTOP-5HQE7ROM.SLDPRT  twig_arm_innerstructure.SLDPRT  twig_arm_outer_shell_gear-LAPTOP-5HQE7ROM.SLDPRT  twig_arm_outer_shell_gear.SLDPRT  twig_arm_outer_shell_lid-LAPTOP-5HQE7ROM.SLDPRT  twig_arm_outer_shell_lid.SLDPRT  twig_camera_adapter_1.SLDPRT  twig_camera_adapter_2.SLDPRT  twig_encoder_cartridge.SLDPRT  twig_housing.SLDPRT  twig_housing_assembly.SLDASM  twig_housing_gripper_pinion.SLDPRT  twig_housing_gripper_rack_gear.SLDPRT  twig_housing_wrist_gear.SLDPRT  twig_main_housing_encoder_gripper_mount_2.SLDPRT  twig_main_housing_encoder_wrist_mount_2.SLDPRT  twig_main_housing_top_lid.SLDPRT  twig_servo bluetrail.SLDPRT  twig_side_mount_new.SLDPRT  twig_side_mounts_right_gearbox_ny.SLDPRT  twig_side_mounts_right_servo_housing.SLDPRT
src/twig_description/: CMakeLists.txt  package.xml
src/twig_description/urdf/: twig.urdf.xacro
src/twig_hardware/: CMakeLists.txt  README.md  package.xml  twig_hardware.xml
src/twig_hardware/config/: node.config.yaml  ros2_controllers.yaml  twig_hardware.ros2_control.xacro
src/twig_hardware/firmware/: AS5600.cpp  AS5600.h  AngularVelocityTracker.h  Encoder.h  EncoderThread.h  EncoderThreadValues.h  EncoderValues.h  FirmwareConfig.h  Fuse.h  FusedServo.h  I2cMultiplexer.h  Lowpass.h  Mutex.h  SoftI2C.cpp  SoftI2C.h  Thread.h  Timer.h  TwigCommand.h  TwigHardwareConfig.h  TwigState.h  firmware.ino  velocity_filter_design.ipynb
src/twig_hardware/firmware/logs/: COM4_2024_04_09.13.19.43.063.txt  COM4_2024_04_12.23.31.40.023.txt  COM4_2024_04_12.23.34.17.278.txt
src/twig_hardware/include/twig_hardware/: twig_hardware.hpp  twig_lib.hpp  visibility_control.h
src/twig_hardware/launch/: node.launch.py
src/twig_hardware/src/: twig_hardware.cpp  twig_hardware_node.cpp  twig_lib.cpp
src/twig_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/twig_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  twig.ros2_control.xacro  twig.srdf  twig.urdf.xacro
src/twig_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+1 more)
src/twig_servo/: CMakeLists.txt  package.xml
src/twig_servo/config/: twig_simulated_config.yaml
src/twig_servo/launch/: demo_twist.launch.py
src/twig_teleop/: CMakeLists.txt  package.xml
src/twig_teleop/config/: foxglove.json  joystick_direct_teleop.config.yaml  joystick_teleop.config.yaml  teleop.config.yaml
src/twig_teleop/launch/: direct_teleop.launch.py  joy.launch.py  teleop.launch.py  transform_teleop.launch.py
src/twig_teleop/src/: joystick_direct_teleop.cpp  joystick_teleop.cpp
src/urdf_tutorial_r2d2/: package.xml  setup.py
(+4 files in other folders)
