<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twig</name>
  <version>0.0.0</version>
  <description>A common entrypoint for all the twig packages</description>
  <maintainer email="nosknut@gmail.com">Knut Ola Nøsen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>twig_servo</exec_depend>
  <exec_depend>twig_teleop</exec_depend>
  <exec_depend>twig_moveit_config</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
