<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twig_servo</name>
  <version>0.0.0</version>
  <description>Contains the moveit_servo node required to teleoperate the twig manipulator</description>
  <maintainer email="nosknut@gmail.com">Knut Ola Nøsen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>moveit_servo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
