<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twig_teleop</name>
  <version>0.0.0</version>
  <description>Contains the nodes and configurations required for teleoperating the twig manipulator</description>
  <maintainer email="nosknut@gmail.com">Knut Ola Nøsen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>topic_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
